# colslaue_etl

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  tests.yml
colslaue_dbt/: dbt_project.yml
colslaue_dbt/models/: hubspot__deals.sql  schema.yml  test_model.sql
colslaue_dbt/models/report/: hubspot__company_overview.sql
colslaue_dbt/models/staging/: hubspot__companies.sql  hubspot__deals.sql  hubspot__users.sql
colslaue_dbt/tests/: unique_hubspot__deals.sql
connectors/: bigquery.py  hubspot_api.py
etl/: app.py
etl/connectors/: bigquery.py  hubspot.py
tests/: test_bigquery.py  test_hubspot.py
workers/: __init__.py  hubspot_to_bigquery.py  tasks.py
