[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=xml --cov=. tests/"

[tool.coverage.run]
branch = true
source = ["colslaue_etl"]
omit = [
    "config.py"
]

[project]
name = "colslaue-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "colslaue",email = "colslaue@gmail.com"}
]
requires-python = ">=3.11"

dependencies = [
    "celery>=5.6.2",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-secret-manager>=2.26.0",
    "hubspot-api-client>=12.0.0",
    "redis>=7.2.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "urllib3 (>=2.6.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
diff-cover  = "^10.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
